<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_class_note"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_label"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:textSize="26sp"
        />

    <Button
        android:id="@+id/button_budget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/budget_text" />

    <Button
        android:id="@+id/button_income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/income_text" />

    <Button
        android:id="@+id/button_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_text" />
</LinearLayout>